--- a/Home.css
+++ b/Home.css
@@ -1,34 +1,5 @@
 .home-container{
-    background-color: black;
-    color: white;
+    background-color: cyan;
+    color:  black;
     min-height: 100vh;
-}
-.heading{
-    margin: 30px;
-}
-.text{
-    margin: 30px;
-    font-size: 20px;
-}
-p{
-    font-family: 'Quicksand', sans-serif;
-    line-height: 30px;
-}
-
-.color-heading{
-    color: orange;
-}
-.btn{
-    background-color: orange;
-    padding: 5px;
-    color: aliceblue;
-    margin: 0px 30px;
-    width: 130px;
-    height: 50px;
-    border-radius: 10px;
-    cursor: pointer;
-    font-size: 20px;
-}
-.btn:hover{
-    background-color: rgb(20, 51, 51);
 }
