--- a/Contact.css
+++ b/Contact.css
@@ -1,43 +1,4 @@
 .contact-container{
-    background-color: black;
+    background-color:mediumspringgreen;
     min-height: 100vh;
-}
-.contact-card{
-    border:2px solid white;
-    height: 300px;
-    width: 400px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 50px;
-    border-radius: 10px;
-}
-.text-name{
-    width: 300px;
-    margin: 10px;
-    margin-left: 20px;
-    padding: 5px;
-    height: 30px;
-    background-color: rgb(20, 51, 51);
-    color: white;
-    font-size: 20px;
-}
-.contact-btn{
-    background-color: orange;
-    cursor: pointer;
-    color: aliceblue;
-    font-size: 20px;
-    width: 130px;
-    height: 50px;
-    border-radius: 10px;
-    margin-left: 130px;
-    margin-top: 20px;
-    padding: 5px;
-}
-.contact-btn:hover{
-    background-color: rgb(20, 51, 51);
-}
-.contact-heading{
-    margin: 10px;
-    text-align: center;
-    color: orange;
 }
