--- a/Footer.css
+++ b/Footer.css
@@ -1,6 +1,9 @@
 .footer{
     background-color: black;
-    padding: 5px;
+    padding: 20px;
     text-align: center;
     color: aliceblue;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
